--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bower": "*",
     "es6-shim": "~0.32.3",
-    "install": "~1.0.4"
+    "install": "~1.0.4",
+    "requirejs": "~2.1.18"
   }
 }
